Adição das funcionalidades JavaScript

--- a/Primeiros-Passos-JavaScript/projeto-detona-ralph/src/styles/main.css
+++ b/Primeiros-Passos-JavaScript/projeto-detona-ralph/src/styles/main.css
@@ -23,7 +23,7 @@
     justify-content: center;
 }
 
-.menu-lives h2:nth-child(2), 
+.menu-time h2:nth-child(2), 
 .menu-score h2:nth-child(2) {
     margin-top: 1rem;
 }
