Adição do Projeto Simulador de Piano, feito no Bootcamp da DIO

--- a/projetos/projeto-simulador-piano/src/styles/main.css
+++ b/projetos/projeto-simulador-piano/src/styles/main.css
@@ -94,7 +94,7 @@ header .column span {
     width: 44px;
     height: 140px;
     z-index: 2;
-    margin: 0 22px 0 -22px;
+    margin: 0 -22px 0 -22px;
     border: 1px solid black;
     border-radius: 0 0 5px 5px;
     background: linear-gradient(#333, #000);
@@ -108,12 +108,16 @@ header .column span {
     font-size: 1.13rem;
 }
 
-.piano-keys .white:active {
+.piano-keys .white.active {
     box-shadow: inset -5px 5px 20px rgba(0,0,0,0.2);
     background: linear-gradient(to bottom #fff 0%, #eee 100%);
 }
 
-.piano-keys .black:active {
+.piano-keys .black.active {
     box-shadow: inset -5px 5px 10px rgba(255,255,255,0.1);
     background: linear-gradient(to bottom #000, #434343);
+}
+
+.piano-keys .key.hide span {
+    display: none;
 }
